<resources>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home Page</string>
    <string name="title_login">Login</string>
    <string name="title_init_inventory">Initial Inventory</string>
    <string name="title_physical_inventory">Inventory</string>
    <string name="title_stock_cards">Stock Overview</string>
    <string name="title_kit_stock_cards">Kit Overview</string>
    <string name="title_unpack_kit">Unpack Kit</string>
    <string name="title_requisition">Create Requisition Balancete for Via classica</string>
    <string name="hint_network_error">NetWork error please check you network connection</string>
    <string name="hint_username">User Name</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOG IN</string>
    <string name="msg_empty_user">User name and password cannot be blank</string>
    <string name="msg_invalid_user">Username or Password is incorrect.</string>
    <string name="msg_user_not_facility">No facility for this user, please contact your administrator.</string>
    <string name="msg_save_products_failed">Save products to local Database failed</string>
    <string name="msg_sync_products_list_failed">Download of products from the server failed, please login again.</string>
    <string name="msg_sync_report_type_failed">Download of report types from the server failed, please login again.</string>
    <string name="msg_save_kit_products_failed">Save Kit failed because there are some products which do not exist</string>
    <string name="init_product_error">Initial Data Error,Please Retry</string>
    <string name="msg_sync_stock_movements_data">Synchronizing stock movement data</string>
    <string name="msg_fetching_products">Downloading product list…</string>
    <string name="msg_fetching_programs">Downloading programs…</string>
    <string name="msg_sync_program_failed">Download of program the server failed, please login again.</string>
    <string name="msg_service_lists">Downloading list of services...</string>
    <string name="msg_fetching_Report_Type">Downloading Report type…</string>
    <string name="msg_sync_requisition_data">Synchronizing requisition data</string>
    <string name="msg_sync_requisition_failed">Download of requisition data failed, please login again.</string>
    <string name="msg_sync_stock_movement_failed">Download of stock movement data failed, please login again.</string>
    <string name="msg_initial_sync_success">Initial sync successful. Tablet is ready for use.</string>
    <string name="msg_download_archived_products_fail">Download of archived products failed, please login again.</string>
    <string name="version_number"><![CDATA[Version <b>%1$s</b>]]> </string>
    <string name="hint_quantity_in_stock">Stock Existente</string>
    <string name="label_expire_date">Expiration Date</string>
    <string name="label_dummy_product">Paracetamol</string>
    <string name="label_dummy_unit">500mg</string>
    <string name="msg_inventory_check_failed">Quantity cannot be blank!</string>
    <string name="msg_invalid_date">Cannot select past month</string>
    <string name="btn_done">VERIFIED</string>
    <string name="msg_remove_expire_date">Are you sure you want to remove this expiry date?</string>
    <string name="msg_save_before_exit">Please save initial inventory before exiting the app</string>
    <string name="btn_no_stock">NO STOCK</string>
    <string name="btn_add_product">Add Products</string>
    <string name="title_basic_products">Basic Products</string>
    <string name="label_soh_amount">Stock Existente</string>
    <string name="hint_soh_amount">Amount</string>
    <string name="tv_batch">Batch &amp; expiry date</string>
    <string name="msg_error_basic_products">All the basic products have to be set up in order to continue</string>
    <string name="label_stock_cards">Stock Card Overview</string>
    <string name="label_kits_stock_cards">KITS</string>
    <string name="label_mmia">Create a MMIA</string>
    <string name="label_sync">Sync Data</string>
    <string name="action_add_new_drug">Add new product</string>
    <plurals name="minute_unit">
        <item quantity="one">%s minute</item>
        <item quantity="other">%s minutes</item>
    </plurals>
    <plurals name="hour_unit">
        <item quantity="one">%s hour</item>
        <item quantity="other">%s hours</item>
    </plurals>
    <plurals name="day_unit">
        <item quantity="one">%s day</item>
        <item quantity="other">%s days</item>
    </plurals>
    <string name="label_last_synced_ago">%s since last sync</string>
    <string name="label_rnr_form_last_synced_time_ago">Requisition last synced %s ago</string>
    <string name="label_stock_card_last_synced_time_ago">Stock cards last synced %s ago</string>
    <string name="msg_back_twice_to_exit">Press back button again to exit.</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="initial_rnr_sync_failed">Initial requisition sync failed, please retry.</string>
    <string name="initial_stock_movement_sync_failed">Initial stock card sync failed, please retry.</string>
    <string name="initial_sync_failed">Initial sync failed</string>
    <string name="label_lmis_title">LMIS - %1$s to %2$s</string>
    <string name="label_AL_title">AL - %1$s to %2$s</string>
    <string name="label_rnrfrom_left_header">Medicine</string>
    <string name="label_regime_header_name">Therapeutic Regime</string>
    <string name="total">Total</string>
    <string name="ape">APEs</string>
    <string name="label_mmia_info_header_name">TYPE</string>
    <string name="label_lmis_speed_info_header">EQUIPMENT</string>
    <string name="hint_mmia_comment">Observations</string>
    <string name="btn_complete">Complete</string>
    <string name="btn_new_movement">NEW MOVEMENT</string>
    <string name="btn_submit">Submit for Approval</string>
    <string name="label_initial_amount">Initial Amount</string>
    <string name="label_received_mmia">Entries</string>
    <string name="label_issued_mmia">Issues</string>
    <string name="label_losses">Losses</string>
    <string name="label_adjustment">Adjustments</string>
    <string name="button_AL">AL</string>
    <string name="button_inventory">Inventory</string>
    <string name="label_inventory">Inventory</string>
    <string name="label_validate">Expiration</string>
    <string name="label_issued_unit">Unit of Issue</string>
    <string name="hint_error_input">Invalid Input</string>
    <string name="btn_save">Save</string>
    <string name="msg_back_confirm">Are you sure you want to quit without saving your work? If you click \'yes\', your draft will be deleted.</string>
    <string name="msg_regime_del_confirm">Are you sure that you want to remove this regime?</string>
    <string name="btn_positive">Yes</string>
    <string name="btn_negative">No</string>
    <string name="msg_mmia_submit_tip">Your MMIA form has been successfully saved, \r\n and will submit automatically when you have a data connection </string>
    <string name="hint_mmia_total_not_equal">Total Therapeutic Regime does not equal Total Patients</string>
    <string name="msg_mmia_not_unique">Cannot submit MMIA twice in a period!</string>
    <string name="msg_reason_for_total_not_match"><![CDATA[Add reason for mismatch between regime & patient totals]]></string>
    <string name="msg_regime_total_and_patient_total_not_match">The regime and patient totals do not match. Please correct your figures or add a comment that explains why the totals differ</string>
    <string name="btn_ok">OK</string>
    <string name="label_add_adult_regime">+ Adult regime</string>
    <string name="label_add_child_regime">+ Child regime</string>
    <string name="msg_regime_already_exist">select regime already exist</string>
    <string name="label_via_kit_received">No. of Kits Received</string>
    <string name="label_via_kit_opened">No. of Kits Opened</string>
    <string name="label_via_kit_hf">HF</string>
    <string name="label_via_kit_chw">CHW</string>
    <string name="label_requisition_title">Requisition - %1$s to %2$s</string>
    <string name="label_rapid_test_title">Rapid Test - %1$s to %2$s</string>
    <string name="label_requisition_header_consultation_header">Normal Requisition</string>
    <string name="request_provincial_district_level">Requisition for Province or District Level</string>
    <string name="title_stock_move_ment">Stock Movements</string>
    <string name="title_inventory_info">Inventory</string>
    <string name="label_consultation">No. of External Consultations Performed</string>
    <string name="label_kits_received">No. of Kits Received</string>
    <string name="label_kits_opened">No. of Kits Opened</string>
    <string name="label_us">HF</string>
    <string name="label_ape">CHW</string>
    <string name="label_initial_amount_requisition">Stock at Beginning of Period</string>
    <string name="label_received_requisition">Sum of Entries</string>
    <string name="label_issued_requisition">Sum of Issues</string>
    <string name="label_theoretical">Theoretical Stock at End of Period</string>
    <string name="label_total_requisition">Total Requested</string>
    <string name="label_different">Difference</string>
    <string name="label_total_requested">Theoretical Quantity to Request</string>
    <string name="label_request_amount">Quantity Requested</string>
    <string name="label_approved_amount">Quantity Approved</string>
    <string name="label_fnm">FNM</string>
    <string name="label_product_codes">Product Codes</string>
    <string name="label_product_name">Product Name</string>
    <string name="msg_low_stock_warning">Your product has low stock.</string>
    <string name="msg_over_stock_warning">Your product is overstock.</string>
    <string name="msg_stock_out_warning">Your product is stocked out.</string>
    <string name="msg_requisition_submit_tip">Your Requisition form has been successfully saved, \r\n and will submit automatically when you have a data connection </string>
    <string name="msg_requisition_not_unique">Cannot submit requisition twice in a period!</string>
    <string name="btn_approve">Approve</string>
    <string name="msg_via_submit_signature">Enter your initials and then approve the requisition amounts</string>
    <string name="msg_rapid_test_submit_signature">Enter your initials and then approve the rapid test amounts</string>
    <string name="msg_mmia_submit_signature">Enter your initials to approve MMIA information</string>
    <string name="msg_approve_signature_rapid_test">Enter your initials and then approve the Rapid Test</string>
    <string name="msg_approve_signature_via">Enter your initials and then approve the Requisition Balancete</string>
    <string name="msg_approve_signature_mmia">Enter your initials and then approve the MMIA</string>
    <string name="hint_others_movement_reason">Other movement reason</string>
    <string name="label_next">Next</string>
    <string name="label_unpack_movement_reason">Origin of movement</string>
    <string name="label_select_unpack_num">How many %1$s would you like to unpack?</string>
    <string name="msg_select_unpack_num_warning">Please Select a number of kits to unpack</string>
    <string name="label_movement_detail">Movement Details</string>
    <string name="lmis_abbott_M2000">LMIS ABBOTT M2000</string>
    <string name="lmis_abbott_alinity_m">LMIS ABBOTT ALINITY M</string>
    <string name="lmis_roche_cobas_6800">LMIS ROCHE COBAS 6800</string>
    <string name="lmis_roche_cobas_5800">LMIS ROCHE COBAS 5800</string>
    <string name="lmis_roche_capctm_96">LMIS ROCHE CAPCTM 96</string>
    <string name="lmis_hologic_panter">LMIS HOLOGIC PANTER</string>
    <string name="lmis_biosecurity_material"> LMIS BIOSECURITY MATERIAL</string>
    <string name="lmis_mpima">LMIS m-PIMA</string>
</resources>