<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_page_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <org.openlmis.core.view.widget.IncompleteRequisitionBanner
            android:id="@+id/view_incomplete_requisition_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            style="@style/Home.Container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_stock_card"
                style="@style/Homepage.Button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/color_primary"
                android:onClick="onClickStockCard"
                android:text="@string/label_stock_cards" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_marginTop="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/btn_inventory"
                            style="@style/Homepage.Button"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="0dp"
                            android:background="@color/color_blue"
                            android:onClick="onClickInventory"
                            android:text="@string/button_inventory" />
                    </RelativeLayout>

                    <Button
                        android:id="@+id/btn_kit_stock_card"
                        style="@style/Homepage.Button"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@color/color_teal"
                        android:onClick="onClickKitStockCard"
                        android:text="@string/label_kits_stock_cards" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btn_lmis_abbott_m2000"
                            style="@style/Homepage.Button"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:background="@color/color_accent"
                            android:onClick="onClickLmisAbbotM2000History"
                            android:text="@string/lmis_abbott_M2000"
                            android:textSize="@dimen/font_size_regular2"
                            android:visibility="gone"/>

                        <Button
                            android:id="@+id/btn_lmis_abbott_alinity_m"
                            style="@style/Homepage.Button"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:background="@color/color_amber_dark"
                            android:onClick="onClickLmisAbbottAlinityMHistory"
                            android:text="@string/lmis_abbott_alinity_m"
                            android:textSize="@dimen/font_size_regular2"
                            android:visibility="gone"/>

                        <Button
                            android:id="@+id/btn_lmis_roche_cobas_6800"
                            style="@style/Homepage.Button"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:background="@color/color_blue_dark"
                            android:onClick="onClickLmisRocheCobas6800History"
                            android:text="@string/lmis_roche_cobas_6800"
                            android:textSize="@dimen/font_size_regular2"
                            android:visibility="gone"/>

                        <Button
                            android:id="@+id/btn_lmis_roche_cobas_5800"
                            style="@style/Homepage.Button"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:background="@color/color_blue_dark"
                            android:onClick="onClickLmisRocheCobas5800History"
                            android:text="@string/lmis_roche_cobas_5800"
                            android:textSize="@dimen/font_size_regular2"
                            android:visibility="gone"/>

                        <Button
                            android:id="@+id/btn_lmis_roche_capctm_96"
                            style="@style/Homepage.Button"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:background="@color/color_teal_dark"
                            android:onClick="onClickLmisRocheCapctm96History"
                            android:text="@string/lmis_roche_capctm_96"
                            android:textSize="@dimen/font_size_regular2"
                            android:visibility="gone"/>

                        <Button
                            android:id="@+id/btn_lmis_hologic_panter"
                            style="@style/Homepage.Button"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:background="@color/color_purple_dark"
                            android:onClick="onClickLmisHologicPanterHistory"
                            android:text="@string/lmis_hologic_panter"
                            android:textSize="@dimen/font_size_regular2"
                            android:visibility="gone"/>

                        <Button
                            android:id="@+id/btn_lmis_biosecurity"
                            style="@style/Homepage.Button"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:background="@color/color_red_dark"
                            android:onClick="onClickLmisBiosecurityHistory"
                            android:text="@string/lmis_biosecurity_material"
                            android:textSize="@dimen/font_size_regular2"
                            android:visibility="gone"/>

                        <Button
                            android:id="@+id/btn_lmis_mpima"
                            style="@style/Homepage.Button"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:background="@color/color_amber_dark"
                            android:onClick="onClickLmisMpimaHistory"
                            android:text="@string/lmis_mpima"
                            android:textSize="@dimen/font_size_regular2" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <org.openlmis.core.view.widget.SyncTimeView
                android:id="@+id/view_sync_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>